@@ -82,9 +82,7 @@
                 <item>
                     <key> <string>center</string> </key>
                     <value>
-                      <list>
-                        <string>my_description</string>
-                      </list>
+                      <list/>
                     </value>
                 </item>
                 <item>
@@ -107,7 +105,7 @@
                     <key> <string>right</string> </key>
                     <value>
                       <list>
-                        <string>my_comment</string>
+                        <string>my_description</string>
                         <string>my_translated_validation_state_title</string>
                       </list>
                     </value>
