@@ -90,7 +90,7 @@
                 </item>
                 <item>
                     <key> <string>width</string> </key>
-                    <value> <int>80</int> </value>
+                    <value> <int>50</int> </value>
                 </item>
               </dictionary>
             </value>
